removed scrollbars and prevent propagation to other divs

--- a/app/static_src/less/partials/nav.less
+++ b/app/static_src/less/partials/nav.less
@@ -816,3 +816,9 @@ span.deleteicon input {
 #containerSubDiv {
     height: 100%;
 }
+
+.ps__rail-x,.ps__rail-y {
+    display: none;
+    color: transparent;
+    background-color: transparent;
+}
